Repository ready for P10 thesis

--- a/report/src/sections/00-abstract.tex
+++ b/report/src/sections/00-abstract.tex
@@ -1,15 +1,8 @@
 
 \begin{abstract}
-    Ethereum prioritizes keeping the blockchain secure, and this will continue due to the large amount of money invested in the network.
-    One of the network's most central aspects is the validators, who are responsible for producing the blocks that make up the chain.
-    However, security and privacy are at risk as Heimbach et al. explore a vulnerability, enabling de-anonymizing validators and linking IP addresses to them.
-    This paper reproduces the de-anonymization on the Ethereum Holesky testnet, verifying the continued existence of the vulnerability.
-    The reproduction shows similar results, de-anonymizing close to the same portion of validators found through the experiment.
-    Differences from de-anonymization on a testnet contrary to the mainnet are discussed, showing, among other things, that nodes generally run more validators on the testnet.
-    The consequences of the validator de-anonymization are also explored, and a potential denial-of-service attack on block proposers is described.
-    The Denial-of-Service attack allows an adversary to halt de-anonymized block proposers, resulting in them missing their proposal opportunity and getting penalized.
+    This is the abstract~\gls{zkp}~\cite{greenwade1993}.
 \end{abstract}
 
 \begin{IEEEkeywords}
-    Ethereum, Blockchain, Distributed Systems, Privacy Attack
+    Ethereum, Proof of Shuffle, Distributed Systems, Inner Product Arguments, Zero-Knowledge Proof
 \end{IEEEkeywords}
