--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -1,289 +1,3 @@
 
 \section{Background}\label{sec:background}
-To better understand the attack we will be performing in this paper, we need to review some of the concepts used in it.
-This section dives into the inner workings of the Ethereum network layer and the consensus algorithm.
-It will also delve into the inspiration for the attack.
-
-
-\subsection{Ethereum and Proof of Stake}\label{subsec:ethereum-and-proof-of-stake}
-Ethereum is a blockchain platform that allows developers to create decentralized applications using smart contracts.
-Previously operating with a~\gls{pow} consensus algorithm, Ethereum transitioned to a~\gls{pos} consensus algorithm in 2022~\cite{EthereumProof-of-stakePoS}.
-This transition was made to reduce the network's energy consumption and increase its scalability.
-The transition was done in a series of upgrades called the Ethereum 2.0 upgrade.
-
-~\gls{pos} is a consensus algorithm used to ensure that everyone agrees on the same state of a blockchain.
-The algorithm includes guidance on whom gets to produce blocks and confirm transactions.
-In Ethereum, the protocol chooses block proposers from a set of validators based on the amount of cryptocurrency they have staked in the blockchain.
-All other validators are then given the role of confirming this block, adding it to the canonical chain.
-
-The proposers get rewarded for creating a valid block, and the validators get rewarded for confirming the block.
-Block proposing happens within epochs of 32 blocks, and the protocol selects a validator as a proposer for each block.
-The proposer is chosen through a random process weighted by the amount of ether the validator has staked.
-Ethereum uses the publicly available \gls{randao} algorithm to simulate this random selection.
-
-The designated proposer must propose a block for the slot, and other validators must verify it within the slot's 12-second time limit.
-If a fork happens, the validators must choose which fork to follow.
-Choosing the fork is done by following the \gls{lmd-ghost}~\cite{EthereumProof-of-stakePoS} algorithm which chooses the fork with the greatest weight of attestations in its history.
-
-\subsection{Subnets}\label{subsec:subnets}
-The Ethereum network is split up into smaller networks called subnets.
-The network's nodes are split into 64 subnets and an additional subnet for attestation aggregation, with each node subscribing to two subnets by default.
-Being subscribed to a subnet is also referred to as being backbone of a subnet.
-
-These subnets are used to help with the scalability of the network by distributing the load from messages.
-Most messages are sent between nodes in the same subnet, lessening the load of a node, as it will receive $\frac{2}{64}$ of all messages in the blockchain instead of all messages.
-
-
-Nodes cannot be a peer with all nodes in a subnet.
-Hence, the peers a node can reach within the same subnet are called its fanout~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
-
-Within a subnet, nodes choose a subset of peers in the same subnet to share their messages with.
-Choosing which nodes belong to this subset is based on a peer score determined by a peer's performance.
-Nodes send all messages they receive within a subnet to these best-performing peers.
-
-\subsection{Attestations}\label{subsec:attestations}
-A validator is expected to broadcast a vote each epoch, also called an attestation~\cite{attestations}.
-This message's overall purpose is to ensure that validators agree on the canonical chain.
-An attestation is sent by its author to only a single subnet.
-Afterward, peers in that subnet will naturally broadcast it to other parts of the network.
-
-The blockchain protocol assigns a single validator to a single slot each epoch, where they must publish their attestation.
-In this attestation, the validator votes for what it sees as the \textit{source} and \textit{target}.
-
-The validator sees the source as the most recent justified block.
-
-The validator sees the target as the first block in the current epoch.
-
-All validators assigned to attest in the same slot are referred to as being on the same committee.
-Sixteen assigned aggregators per subnet then collect all attestations broadcast in each subnet.
-These collect votes equivalent to their own, aggregate them, and broadcast them to the network.
-These are then to be included in the block of the designated slot.
-
-
-%\subsection{Zero-Knowledge Proofs}\label{subsec:zero-knowledge-proofs}
-%A~\gls{zkp} is a cryptographic method that allows one party to prove to another party that something is true without revealing any information.
-%
-%Two of the subcategories of \gls{zkp}s are \gls{zk-snark} and \gls{zk-stark}.
-%~\gls{zk-snark} is the more common of the two.
-%It uses elliptic curve cryptography to create proofs based on the assumption that it is hard to find the discrete logarithm form the publicly known base point.
-%~\gls{zk-snark} has a start-up ritual which requires a trusted setup by all parties involved that the original proving key is destroyed as to not be able to create fake proofs.
-%A criticism of \gls{zk-snark} is that it is not quantum resistant because of the reliance on elliptic curve cryptography.
-%
-%~\gls{zk-stark} on the other hand, is a newer and more complex~\gls{zkp}.
-%Despite not having non-interactive in its name,~\gls{zk-stark} is also non-interactive.
-%Different form~\gls{zk-snark},~\gls{zk-stark} uses hashing functions to create proofs instead of elliptic curves.
-%This method is post-quantum secure and does not require a trusted setup.
-%It does, however, come with a higher computational cost and is not as widely used and documented as~\gls{zk-snark}.
-
-\subsection{Validators}\label{subsec:validator}
-A validator is an entity running on a network client, among other things, consisting of an ether balance and a key pair for identifying it~\cite{Staking}.
-
-For a validator client to work, it needs to be run in cooperation with a consensus node client.
-A consensus node client can run an unbounded number of validators.
-Several validators running in cooperation with a single consensus node mean that they all share the same identity.
-The shared identity includes data such as IP addresses and the ID of the consensus node.
-
-At each slot, the~\gls{randao} algorithm is used to select a validator responsible for processing transactions,
-including them in a block,
-and then propose this block to the blockchain.
-This procedure is also illustrated by~\autoref{fig:proposerChoice}.
-Determining who will be a block proposer is explained in~\autoref{subsec:randao}.
-Along with this, the validator is also responsible for attesting blocks proposed by other validators,
-ensuring the liveness of the chain.
-
-
-\begin{figure}[t]
-    \resizebox{\columnwidth}{!}
-    {
-\begin{tikzpicture}
-    \tikzstyle{every node}=[font=\large]
-    \draw [ fill={rgb,255:red,169; green,212; blue,249} ] (9.25,11.75) circle (0.75cm) node {\large Node 1} ;
-    \draw [ fill={rgb,255:red,255; green,138; blue,138} ] (5,9.75) rectangle  node {\LARGE Val} (6.25,8.5);
-    \draw [ fill={rgb,255:red,255; green,138; blue,138} ] (7.5,9.75) rectangle  node {\LARGE Val} (8.75,8.5);
-    \draw [ fill={rgb,255:red,255; green,138; blue,138} ] (10,9.75) rectangle  node {\LARGE Val} (11.25,8.5);
-    \draw [ fill={rgb,255:red,255; green,138; blue,138} ] (12.5,9.75) rectangle  node {\LARGE Val} (13.75,8.5);
-    \draw [ fill={rgb,255:red,169; green,212; blue,249} ] (9.25,0.25) circle (0.75cm) node {\large Node 2} ;
-    \draw [ fill={rgb,255:red,255; green,138; blue,138} ] (5,3.5) rectangle  node {\LARGE Val} (6.25,2.25);
-    \draw [ fill={rgb,255:red,255; green,138; blue,138} ] (7.5,3.5) rectangle  node {\LARGE Val} (8.75,2.25);
-    \draw [ fill={rgb,255:red,255; green,138; blue,138} ] (10,3.5) rectangle  node {\LARGE Val} (11.25,2.25);
-    \draw [ fill={rgb,255:red,255; green,138; blue,138} ] (12.5,3.5) rectangle  node {\LARGE Val} (13.75,2.25);
-    \draw [dashed] (3,7.5) -- (3,3.5);
-    \draw [ fill={rgb,255:red,209; green,209; blue,209} ] (4.75,6.5) rectangle  node {\normalsize Slot 1} (6,5.25);
-    \draw [ fill={rgb,255:red,209; green,209; blue,209} ] (7.25,6.5) rectangle  node {\normalsize Slot 2} (8.5,5.25);
-    \draw [ fill={rgb,255:red,209; green,209; blue,209} ] (9.75,6.5) rectangle  node {\normalsize Slot 3} (11,5.25);
-    \draw [ fill={rgb,255:red,209; green,209; blue,209} ] (12.75,6.5) rectangle  node {\normalsize Slot 32} (14,5.25);
-    \node [font=\large] at (3,8) {Epoch n};
-    \draw [dashed] (15.5,7.5) -- (15.5,3.5);
-    \node [font=\large] at (15.5,8) {Epoch n+1};
-    \node [font=\Huge] at (11.75,6) { \ldots};
-    \draw [->, >=Latex, dashed] (5.5,3.75) -- (5.25,5);
-    \draw [->, >=Latex, dashed] (8,3.75) -- (7.75,5);
-    \draw [->, >=Latex, dashed] (10.5,8.25) -- (10.25,6.75);
-    \draw [->, >=Latex, dashed] (13.25,8.25) -- (13.25,6.75);
-    \draw [->, >=Latex] (3.5,5.75) -- (4.5,5.75);
-    \draw [->, >=Latex] (6.25,5.75) -- (7,5.75);
-    \draw [->, >=Latex] (8.75,5.75) -- (9.5,5.75);
-    \draw [->, >=Latex] (14.25,5.75) -- (15.25,5.75);
-    \draw [->, >=Latex] (8.25,0.75) -- (6.5,2);
-    \draw [->, >=Latex] (8.75,1) -- (8.25,2);
-    \draw [->, >=Latex] (9.75,1) -- (10.25,2);
-    \draw [->, >=Latex] (10.25,0.75) -- (12.25,2);
-    \draw [->, >=Latex] (8.25,11.5) -- (6.5,10);
-    \draw [->, >=Latex] (8.75,11) -- (8.5,10);
-    \draw [->, >=Latex] (9.75,11) -- (10,10);
-    \draw [->, >=Latex] (10.25,11.5) -- (12.25,10);
-\end{tikzpicture}\label{fig:proposerChoiceTikz}}
-\caption{Illustration of validators selected as proposers through an epoch.
-Two random nodes are shown, each having several validators.
-Some of these validators are chosen to propose a block in a designated slot.}
-\label{fig:proposerChoice}
-\end{figure}
-To be able to run a single validator, one must stake 32 ETH,
-which is ~\$99,776\footnote{As of 2024-11-18 seen on \href{https://beaconcha.in/}{beaconcha.in}}.
-Having this much money at stake should ensure that a validator acts honestly.
-Doing so will also earn the validator a reward.
-However, acting dishonestly will result in the burning or slashing of ether.
-The rewards and punishments are described in the following sections.
-\subsubsection{Validator rewards}\label{subsubsec:valrewards}
-Validators are rewarded for several different actions~\cite{PoSRewAndPen}.
-Each of these actions is rewarded with different weights,
-Nevertheless, they all depend on the total amount of staked ether by all validators and the validator's own staked amount.
-However, when a validator has a balance of 32 ETH\@, they receive optimal rewards.
-
-A base reward, to be used on the reward weights, is calculated for a single validator as follows, where \texttt{BR} is \textit{base reward}, \texttt{EB} is \textit{effective balance}, \texttt{BRF} is \textit{base reward factor} set to 64,
-\texttt{BRPE} is \textit{base rewards per epoch} set to 4,
-and \texttt{AB} is \textit{active balance}, which is the total staked ether by all validators:
-\begin{equation}
-    BR = EB\cdot(\frac{BRF}{BRPE\cdot \sqrt{\sum{AB}}})
-    \label{eq:basereward}
-\end{equation}
-
-
-The reward a validator receives is then calculated as follows:
-\begin{equation}
-    \frac{\sum{weights}}{64}\cdot BR
-    \label{eq:valrewards}
-\end{equation}
-What is included in the sum of weights varies depending on the completed task.
-The weights of the different tasks are the following:
-\begin{enumerate}
-    \item Timely source vote: 14
-    \item Timely target vote: 26
-    \item Timely head vote: 14
-    \item Sync reward: 2
-    \item Proposer weight: 8
-\end{enumerate}
-The most profitable reward is the proposer reward.
-This reward is given to the validator whenever it is chosen as a proposer and correctly proposes a block to the blockchain.
-In this case, instead of being rewarded only once, the proposer is rewarded for each valid attestation included in the block proposed.
-\begin{equation}
-    BR\cdot\frac{8}{64}\cdot \#attestations\label
-    {eq:propreward}
-\end{equation}
-The maximum number of attestations in a block is 128.
-Therefore, the proposer can receive a reward up to $BR\cdot\frac{8}{64}\cdot128$ ETH when proposing a block~\cite{PoSRewAndPen,consensus-spec-phase-0}.
-Because of that, validators do not want to miss being the proposer.
-Also, the chance of getting to propose a block is relatively low.
-
-The average amount of staked ether for a validator is over 32 ETH\@.
-Furthermore, the validator's probability of being a proposer reaches optimality at 32 staked ether.
-Therefore, there is an almost equal chance of being a proposer among the over 1 million validators in Ethereum\footnote{As of 2024-11-18 seen on~\href{https://beaconcha.in/}{beaconcha.in}}.
-
-\subsubsection{Validator punishments}\label{subsubsec:valpunish}
-A validator can also be punished for doing things that negatively affect the chain.
-Ethereum has two kinds of penalties, burning and slashing, where a validator loses some of their staked ether.
-Should a validator get penalized and end up below 16 staked ether, they will be removed as a validator~\cite{consensus-spec-phase-0}.
-
-
-Burning happens every epoch that a validator is offline.
-If ether gets burned, it is gone forever.
-To calculate how much ether is retained after burning per offline epoch, $n$, the following formula is used, with \texttt{IPQ} being the \textit{inactivity penalty quotient} set to $2^{26}$~\cite{consensus-spec-phase-0}:
-\begin{equation}
-    \left(1-\frac{1}{IPQ}\right)^\frac{n^2}{2}
-    \label{eq:burn}
-\end{equation}
-
-
-This means that a validator being offline in a single epoch still retains $0.99999999255\%$ of their staked ether\@.
-A validator with 32 staked ether would, therefore, need
-to be offline for many epochs before eventually being removed for having under 16 staked ether\@.
-
-
-Slashing happens when a validator acts maliciously against the blockchain and cannot be invoked only by being offline.
-Slashing happens from at least one of three causes~\cite{PoSRewAndPen}:
-\begin{enumerate}
-    \item Proposing two different blocks at the same slot
-    \item Attesting a block that surrounds another block, hereby changing history
-    \item Double voting - Attesting to two candidates for the same block
-\end{enumerate}
-If this is detected, ~$\frac{1}{32}$ of the validator's staked ether is immediately burned, and a 36-day removal period of the validator begins, where the staked ether is gradually burned.
-After 18 days, an additional penalty is applied.
-The magnitude of this penalty scales with the total staked ether of the slashed validators in the same period.
-At worst, a validator can have all their ether burned if many other validators were also slashed during that period.
-
-\subsection{RANDAO}\label{subsec:randao}
-As mentioned in~\autoref{subsec:validator}, the Ethereum protocol chooses block proposers using a random-number-generator called \gls{randao}\footnote{\href{https://github.com/randao/randao}{RANDAO - GitHub}}.
-The random selection is decided by the \gls{randao} algorithm, which is used in every slot.
-Each chosen proposer will get the \gls{randao} value, computed at the previous slot, and \texttt{XOR} it with the hash of their private key and epoch number.
-
-
-This creates what is called the \gls{randao} reveal.
-It can be verified with the proposer's public key.
-Of course, this happens at all 32 slots of an epoch, ensuring the protocol's randomness.
-At the end of each epoch, the latest reveal constitutes the seed, which is used to determine who the next proposers will be.
-
-
-Being chosen as a block proposer comes with some duties, such as creating the block.
-Therefore, they need to know in advance if they will be the proposer of a block in order to perform their duties on time.
-
-The proposer selection among the validators is done two epochs in advance~\cite{random-selection}.
-More specifically, the selection for epoch $n+2$ happens at the end of epoch $n$~\cite{upgrading-ethereum-randomness}.
-Hence, if they are proposing a block, a validator knows at least one epoch in advance, at most two epochs.
-
-
-\subsection{ENR}\label{subsec:enr}
-An~\gls{enr} is a record that contains information about a node in the network~\cite{EIP-778:Ethereum-Node-Records}.
-Ethereum uses~\glspl{enr} to package the information sent from node to node.
-The~\glspl{enr} are sent during the discovery protocol, where nodes discover each other.
-The package contains information like the peer's IP address, port, and public key.
-Because of the nature of the discovery protocol, if one has a node in Ethereum, one can see the~\gls{enr} of all discovered peers.
-Moreover, since the~\gls{enr} contains the IP address and the public key of the peer, the node can see the corresponding IP addresses and public keys of all the peers that have been discovered.
-
-
-\subsection{Inspirational Paper}\label{subsec:inspirational-papers}
-
-In the~\gls{de-anon paper}, the authors show that it is possible to de-anonymize validators on the Ethereum network by observing attestations and subscribing to all subnets~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
-This paper is relevant to our work as it shows that private information about the validators can be obtained on the network.
-It is also the main inspiration for our attack.
-
-The paper takes advantage of the attestations, including information such as the sender's IP and backbone subnets, to obtain information about the validators.
-They use a custom version of a Prysm node called RAINBOW that subscribes to all subnets for their setup.
-They use it to log peers and break peer inputs down into "colors" of the validators.
-This information consists of all received attestations, their origin and origin subnet; all advertised static subscriptions of peers, and connection status for all peers they interact with.
-
-They also used a network crawler to find peers more quickly in the Ethereum network, enabling broader discovery.
-However, the crawler and the RAINBOW node are two separate entities.
-
-In the execution of their experiment, they set up four nodes spread out across four different geographical locations: two in Europe, one in Asia, and one in the United States.
-They let the nodes run for three days, de-anonymized 235,719 validators and contacted 11,219 peers.
-These peers were also divided into four categories based on a heuristic developed by the authors.
-
-The categories are:
-\begin{itemize}
-    \item \textbf{De-anonymized:} One or more validators have been discovered on this peer.
-    \item \textbf{No validators:} No validators have been discovered on this peer, as no non-backbone attestation was received.
-    \item \textbf{64 subnets:} The peer was subscribed to all 64 subnets, so it is impossible to tell backbone attestations from non-backbone attestations.
-    \item \textbf{Rest:} Peers that did receive non-backbone attestations, but no validators were identified on the peer.
-\end{itemize}
-
-The heuristic developed for de-anonymizing validators includes four criteria:
-\begin{enumerate}
-    \item The proportion of non-backbone attestations for validator v exceed
-    \begin{equation}
-        0.9*\left(\frac{64-n_{sub}(p)}{64}\right)
-        \label{eq:heurestic}
-    \end{equation} where nsub(p) is the average number of subnets the peer is subscribed to over the connection’s duration.
-    \item The peer is not subscribed to all 64 subnets.
-    \item The node receives at least every tenth attestation expected for validator v on peer p.
-    \item The number of attestations received for validator v from peer p exceeds the mean number of attestations per validator from peer p by two standard deviations.
-\end{enumerate}
+This is the background/preliminaries section
