--- a/report/src/sections/07-conclusion.tex
+++ b/report/src/sections/07-conclusion.tex
@@ -1,14 +1,4 @@
 
 
 \section{Conclusion}\label{sec:conclusion}
-After looking into Ethereum and implementing the de-anonymization attack on validators, we have found that the attack is indeed possible.
-Our results reaffirm the findings of the~\gls{de-anon paper} and further highlight the Ethereum network's security issues.
-The issue is that even with zero ether staked, an attacker can gain access to a lot of information about the validators in the network, most importantly their IP addresses.
-This information can then be used to perform attacks on the network, such as a~\gls{dos} attack on block proposers, potentially leading to a loss of money for the honest actors within the Ethereum network.
-
-
-Our research has also shown a difference in the makeup of the Holesky testnet compared to the mainnet.
-The results of the de-anonymization attack on the Holesky testnet show that there are more irregular validators on the testnet compared to the mainnet.
-It also shows that the amount of validators on an individual node is many times higher on the testnet than on the mainnet.
-The difference is likely linked to the low risks of the Holesky testnet.
-So, even though the two networks are fundamentally the same, the ecosystem within them is different, as expected.
+This is the conclusion
