--- a/report/src/sections/08-future-works.tex
+++ b/report/src/sections/08-future-works.tex
@@ -1,59 +1,4 @@
 
 
 \section{Future work}\label{sec:future-works}
-
-\subsection{Potential mitigations}\label{subsec:potential-mitigations}
-At the moment, there exists an improvement proposal
-to include a~\gls{ssle} mechanism, called Whisk, in Ethereum~\cite{EthereumResearchSSLE2024}.
-
-This method aims to improve the network's security by obfuscating the proposer's identity.
-It requires the validators to commit to a shared secret, which can be bound to a validator's identity and randomized to match that specific validator's identity.
-
-Every epoch, a random set of validators is chosen to gather commitments from a set of validators using~\gls{randao}.
-Proposers shuffle the commitments for 8,182 slots ($\sim$24 hours).
-At each shuffle, the proposer must construct a~\gls{zkp} to prove that it has shuffled honestly while not revealing how the set was shuffled.
-The proof will then become part of the blockchain for other validators to verify.
-At the end of the 8,182 slots shuffle,~\gls{randao} is then used to map the shuffled list onto the following 8,182 slots in the same way it has been done since Ethereum used~\gls{pos}.
-Validators can now decrypt the commitment that matches their identity and propose a block in the slot that they are assigned to.
-
-This whole process is an example of~\gls{zkp} where the point is that every validator can prove that it is their turn to propose a block without revealing their identity.
-If an attacker tried to fetch the upcoming proposers, he would only retrieve one of these commitments.
-Therefore, it is unfeasible for an adversary to perform the Proposer~\gls{dos} attack since the adversary would not know which validator to target.
-
-However, it does not prevent the data collection part of the attack, which is used to de-anonymize the validators.
-
-But hindering a~\gls{dos} attack in itself is a good reason
-to look at implementing~\gls{ssle} in Ethereum as a further step to improving the network's security.
-
-
-\subsubsection{More Nodes}\label{subsubsec:more-nodes}
-The attack we have performed in this paper is based on our ability to gather information about the validators in the network by logging attestations.
-But since every validator has multiple tasks, those being broadcasting and aggregating attestations and proposing blocks, increasing the number of nodes each validator uses could be a possible solution to the attack.
-The validators could then use one node for broadcasting and aggregating attestations and another for proposing blocks.
-This separation would make it harder for the attacker to~\gls{dos} the proposer when proposing a block since all the attestations the attacker has gathered would be from a different node with a different IP than the one proposing the block.
-
-This mitigation would not stop an attacker from de-anonymizing attesters, but it would make it harder for the attacker to perform a~\gls{dos} attack on the validators.
-However, it would increase the system's entry threshold for validators since they would have to run more nodes.
-
-\subsubsection{K-anonymity}\label{subsubsec:k-anonymity}
-Another possible solution to the de-anonymization part of the attack could be to implement a K-anonymity system.
-Using the Prysm Ethereum client, it is possible to choose trusted peers as additional relays for the messages.
-This would make it harder to de-anonymize validators, as attestations between a K-anonymity group would be sent by an arbitrary peer in that group.
-Therefore, it would be harder for the adversary to know if the sender of a non-backbone attestation was the creator of it.
-This means that an attacker must attack $K$ nodes from the same K-anonymity group to halt a proposer in that group.
-
-This solution would make it harder for the attacker to de-anonymize validators and perform the~\gls{dos} attack.
-However, this would also require new validators in the system to have a set of trusted peers that they can use as relays for their messages.
-This would also increase the threshold for entry in the system for validators and the latency within the system due to the increased number of hops the messages would have to go through.
-
-
-\subsection{Building on the experiment}\label{subsec:further-research}
-In the~\gls{de-anon paper}, they ran their experiment on the mainnet while we ran it on a testnet.
-The difference means that the results of the two experiments could differ due to the dissimilarities in the two networks.
-It would be interesting to run our experiment on the mainnet to see if the results would more closely align with the original paper.
-
-
-Another place to look for further research would be to implement the~\gls{dos} attack as a follow-up to this paper.
-Since this paper mainly focuses on the data collection part of the attack, it would be interesting to see the consequences of the~\gls{dos} attack trying to stop a proposer from proposing a block using the data collected.
-We can see a clear use case for the data collected in the~\gls{dos} attack, and it is clear that this is a possible attack vector that could be used to obstruct the proposer from proposing a block and gain the rewards that come with it.
-However, this would need to be tested on a local testnet since, unlike the data collection part of the attack, the~\gls{dos} attack would harm the network and cause a loss of ether for the validators being attacked if successful.
+This is the future work.
