--- a/report/src/sections/01-introduction.tex
+++ b/report/src/sections/01-introduction.tex
@@ -1,51 +1,7 @@
 
 
 \section{Introduction}\label{sec:introduction}
-Ethereum is a decentralized network and is one of the most popular blockchains.
-Currently, Ethereum is the most used blockchain which relies on the consensus mechanism of~\gls{pos}.
-Ethereum switched from~\gls{pow} to~\gls{pos} in 2022 with the release of Ethereum 2.0~\cite{EthereumProof-of-stakePoS}.
-A part of this decision was to reduce the requirements for participating in the network.
-With the increasing number of validators, the network is becoming more active, with a greater number of messages being sent between them.
-
-
-With all of these messages being sent, the network is becoming increasingly vulnerable to attacks based on information gathering.
-This makes collection of information, such as IPs of validators, possible and creates a potential threat to the network.
-This vulnerability led to the paper by Heimbach et al.~\cite{heimbach2024deanonymizingethereumvalidatorsp2p},~\gls{de-anon paper}, which presents a de-anonymization attack on validators in the Ethereum network.
-In this paper, we have recreated the de-anonymization attack on Ethereum validators from the~\gls{de-anon paper}, identifying and linking IPs to active validators.
-
-
-Even without a validator, the attack enables the gathering of information about validators in the~\gls{p2p} network through attestations sent throughout the Ethereum network.
-Enough information is gathered from logging peers and the messages received to de-anonymize validators.
-The information gathered from the attack can then be used to perform attacks, such as a~\gls{dos} attack on proposers, when combined with the fact that the proposers of each block are known in advance.
-This could lead to a loss of money for the validators, as they are penalized for being inactive.
-A potential monetary gain for the attacker is possible if a victim is the proposer in the slot before the attacker.
-
-In this paper, we have implemented the de-anonymization attack\footnote{The implementation can be found at \href{https://github.com/Maltesius/IP9}{github.com/maltesius/ip9}}, documented the results, and compared them against
-the results from the~\gls{de-anon paper}.
-We discuss the incentives and consequences that arise after successfully executing the de-anonymization attack on block proposers.
-Following this, we describe a possible~\gls{dos} attack on block proposers made possible after the de-anonymization validators.
-
-
-This paper was inspired by the work of the~\gls{de-anon paper}.
-It has led us to make the following contributions:
-\begin{itemize}
-    \item We have successfully executed the de-anonymization attack on validators.
-    The attack was run on the Holesky testnet for ethical reasons.
-    \item We have discovered some similarities with the~\gls{de-anon paper}, especially the de-anonymization rate of validators through running the attack.
-    We also found differences, such as the amount of validators per peer, due to running on a different network.
-    \item A thorough description of how to implement a~\gls{dos} attack on block proposers has been developed.
-\end{itemize}
+This is the introduction
 
 \subsection*{Related Work}\label{subsec:related-work}
-Blockchain technology has a history of many attacks, some specific to the Ethereum network.
-Before choosing the de-anonymization attack in the context of the block proposer~\gls{dos} attack, we considered other attacks that could be performed on the Ethereum network.
-\autoref{sec:attacks-on-ethereum} describes many of these attacks further, but the most closely related attacks are mentioned here.
-
-
-\subsubsection*{DoS Attack}\label{subsubsec:dos-attack}
-Instances of~\gls{dos} attacks seen on Ethereum range from attacks on the proposers to attacks that seek to slow down the network itself.
-One of these attacks aims to slow down the network by using underpriced opcodes to create a block that is hard to process in time~\cite{10.1145/3391195,9815256}.
-However, this has been mitigated in an Ethereum improvement proposal~\cite{Opcode-mitigation}.
-Another way to slow down the network is to create empty accounts that are hard to process~\cite{empty-account-mitigation,empty-account-eip-mitigation}.
-This attack, however, is outdated and has been mitigated by making it nearly impossible to create empty accounts in the network.
-
+This is related work
