--- a/report/src/main.tex
+++ b/report/src/main.tex
@@ -16,7 +16,8 @@
     \maketitle
     \input{sections/00-abstract}
     \input{sections/01-introduction}
-    \input{sections/02-background}
+    \input{sections/02-related-work}
+    \input{sections/03-background}
     \input{sections/04-experimental-protocol}
     \input{sections/05-results}
     \input{sections/06-discussion}
