--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -18,3 +18,19 @@
     number  = "3",
     pages   = "342--351"
 }
+
+@article{Whisk2024,
+    title        = {Whisk: A practical shuffle-based SSLE protocol for Ethereum},
+    author       = {George Kadianakis},
+    year         = {2024},
+    note         = {Accessed: 22-10-2024},
+    url = {https://ethresear.ch/t/whisk-a-practical-shuffle-based-ssle-protocol-for-ethereum/11763}
+}
+
+@misc{cryptoeprint:2022/560,
+    author = {Kasper Green Larsen and Maciej Obremski and Mark Simkin},
+    title = {Distributed Shuffling in Adversarial Environments},
+    howpublished = {Cryptology {ePrint} Archive, Paper 2022/560},
+    year = {2022},
+    url = {https://eprint.iacr.org/2022/560}
+}
