--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -1,15 +1,15 @@
-%! Author = olive
-%! Date = 16/04/2025
-
-% Preamble
-\documentclass[11pt]{article}
-
-% Packages
-\usepackage{amsmath}
-
-% Document
-\begin{document}
+\section{Related Work}\label{sec:related-work}
 
 
 
-\end{document}
+
+\subsection{Whisk}\label{sec:related-work-whisk}
+Ethereum currently has an improvement proposal suggesting the implementation of called Whisk~\cite{Whisk2024}.
+Whisk is a zero-knowledge proof system that allows for the verification of the correctness of a shuffle without revealing the input or output.
+It is based on the concept of inner product arguments and uses elliptic curve cryptography to achieve its goals.
+Whisk is designed to be efficient and scalable, making it suitable for use in Ethereum and other blockchain systems.
+Whisk is one of the suggested solutions to attacks on the Ethereum network targeting block proposers.
+With the help of the zero-knowledge proofs Whisk help make the previous public proposer list and order into a system where only the proposer can see if it is their turn to propose a block, and they can proof that to be the case.
+
+
+\subsection{Aarhus shuffle}\label{sec:related-work-aarhus-shuffle}
