--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -12,4 +12,8 @@ Whisk is one of the suggested solutions to attacks on the Ethereum network targe
 With the help of the zero-knowledge proofs Whisk help make the previous public proposer list and order into a system where only the proposer can see if it is their turn to propose a block, and they can proof that to be the case.
 
 
-\subsection{Aarhus shuffle}\label{sec:related-work-aarhus-shuffle}
+\subsection{Shuffling algorithm}\label{sec:related-work-Shuffling-algorithm}
+The shuffling algorithm has gone though many iterations and improvements in order ti increase speed and reduce the size the proof.
+This is because the proposer has a limited amount of time to propose a block in each slot, and the addition of the proof to the protocol adds increase the size of the block.
+This is the reason why the current implementation of curdleproof has chosen the shuffling algorithm~\cite{cryptoeprint:2022/560} be Larsen et al.
+
