--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -15,5 +15,10 @@ With the help of the zero-knowledge proofs Whisk help make the previous public p
 \subsection{Shuffling algorithm}\label{sec:related-work-Shuffling-algorithm}
 The shuffling algorithm has gone though many iterations and improvements in order ti increase speed and reduce the size the proof.
 This is because the proposer has a limited amount of time to propose a block in each slot, and the addition of the proof to the protocol adds increase the size of the block.
-This is the reason why the current implementation of curdleproof has chosen the shuffling algorithm~\cite{cryptoeprint:2022/560} be Larsen et al.
+This is the reason why the current implementation of curdleproof has chosen the shuffling algorithm~\cite{cryptoeprint:2022/560} proposed by Larsen et al.
 
+The way the shuffle works is by selecting 2 days' worth of proposers, and then shuffling the over one day's worth of slots to create a new list of proposers for the following day.
+In each slot a subset of the proposers are shuffled, and the rest are left unchanged.
+
+Though experiments Larsen et al. also surgests that their may be room to lower the size of the subsets chosen in eahc lot without losing the security of the shuffle.
+Thereby increasing the speed of the shuffle and reducing the size of the proof being add to the blockchain.
