--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -34,3 +34,40 @@
     year = {2022},
     url = {https://eprint.iacr.org/2022/560}
 }
+
+@inproceedings{bunz2018bulletproofs,
+    title={Bulletproofs: Short proofs for confidential transactions and more},
+    author={B{\"u}nz, Benedikt and Bootle, Jonathan and Boneh, Dan and Poelstra, Andrew and Wuille, Pieter and Maxwell, Greg},
+    booktitle={2018 IEEE symposium on security and privacy (SP)},
+    pages={315--334},
+    year={2018},
+    organization={IEEE}
+}
+
+@article{chung2022bulletproofs+,
+    title={Bulletproofs+: Shorter proofs for a privacy-enhanced distributed ledger},
+    author={Chung, Heewon and Han, Kyoohyung and Ju, Chanyang and Kim, Myungsun and Seo, Jae Hong},
+    journal={Ieee Access},
+    volume={10},
+    pages={42081--42096},
+    year={2022},
+    publisher={IEEE}
+}
+
+@inproceedings{zhang2024springproofs,
+    title={Springproofs: Efficient inner product arguments for vectors of arbitrary length},
+    author={Zhang, Jianning and Su, Ming and Liu, Xiaoguang and Wang, Gang},
+    booktitle={2024 IEEE Symposium on Security and Privacy (SP)},
+    pages={3147--3164},
+    year={2024},
+    organization={IEEE}
+}
+
+@inproceedings{eagen2024bulletproofs++,
+    title={Bulletproofs++: Next generation confidential transactions via reciprocal set membership arguments},
+    author={Eagen, Liam and Kanjalkar, Sanket and Ruffing, Tim and Nick, Jonas},
+    booktitle={Annual International Conference on the Theory and Applications of Cryptographic Techniques},
+    pages={249--279},
+    year={2024},
+    organization={Springer}
+}
