--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -22,7 +22,7 @@ The way the shuffle works is by selecting 2 days' worth of proposers, and then s
 In each slot a subset of the proposers are shuffled, and the rest are left unchanged.
 
 Though experiments Larsen et al. has shown that after enough shuffles becomes secrue even in adversarial environments.
-They also surgests that their may be room to lower the size of the subsets chosen in eahc lot without losing the security of the shuffle.
+They also surgests that their may be room to lower the size of the subsets chosen in each lot without losing the security of the shuffle.
 Thereby increasing the speed of the shuffle and reducing the size of the proof being added to the blockchain.
 
 \subsection{Bulletproofs}\label{sec:related-work-bulletproofs}
